--- a/style.css
+++ b/style.css
@@ -1,94 +1,9 @@
-body {
-  margin: 0;
-  font-family: sans-serif;
-  background: #000;
-  overflow: hidden;
-}
-
-#gameArea {
-  position: relative;
-  width: 400px;
-  height: 600px;
-  margin: 40px auto;
-  background: #333;
-  border: 3px solid white;
-  overflow: hidden;
-}
-
-#playerCar {
-  position: absolute;
-  width: 50px;
-  height: 100px;
-  background: red;
-  bottom: 20px;
-  left: 175px;
-  border-radius: 5px;
-}
-
-.obstacle {
-  position: absolute;
-  width: 50px;
-  height: 100px;
-  background: yellow;
-  border-radius: 5px;
-}
-
-.road-line {
-  position: absolute;
-  width: 10px;
-  height: 50px;
-  background: white;
-  left: 195px;
-}
-
-#score {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  z-index: 2;
-}
-
-#gameOver {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.85);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  display: none;
-}
-
-#gameOver button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 18px;
-}
-
-/* Touch Controls */
-#touchControls {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  z-index: 3;
-}
-
-#touchControls button {
-  background: rgba(255, 255, 255, 0.3);
-  border: 2px solid white;
-  color: white;
-  font-size: 30px;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-}
+h1 {color: darkgoldenrod;
+font-size: 90px; }
+button {background-color: blueviolet;
+    width: 300px;
+height: 40px;
+color: aliceblue;
+font-size: 15px;
+border: none;
+border-radius: 10px;}
