--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   overflow: hidden;
-  background: url('images/bg.png') no-repeat center center;
+  background: url('background.png') no-repeat center center;
   background-size: cover;
   font-family: 'Comic Sans MS', cursive, sans-serif;
   color: white;
@@ -37,4 +37,5 @@ body {
   border-radius: 8px;
   z-index: 5;
 }
+
 
